--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
         <item name="colorOnPrimary">@color/darkBrown</item>
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/brown</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/darkBrown</item>
         <!-- Customize your theme here. -->
         <!-- font -->
         <item name="android:fontFamily">@font/gmarketm</item>
