--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:layout_marginBottom="80dp"
-            android:background="@drawable/round_button"
+            android:background="@drawable/round_button_yellow"
             android:onClick="goToPlusFood"
             android:paddingStart="45dp"
             android:paddingTop="15dp"
@@ -70,7 +70,7 @@
             android:id="@+id/main_button_show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_button"
+            android:background="@drawable/round_button_yellow"
             android:onClick="goTOShowFood"
             android:paddingStart="45dp"
             android:paddingTop="15dp"
