--- a/app/src/main/res/layout/plus_food_activity.xml
+++ b/app/src/main/res/layout/plus_food_activity.xml
@@ -67,7 +67,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/round_button"
+            android:background="@drawable/round_button_yellow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
