--- a/app/src/main/res/layout/show_list_activity.xml
+++ b/app/src/main/res/layout/show_list_activity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mainLightYellow"
-    tools:context=".ShowCalActivity">
+    tools:context=".ShowListActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -55,9 +55,20 @@
                 android:id="@+id/showCal_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="goToListView"
+                android:onClick="goToCalView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/showCal_logo" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="7dp"
+                android:onClick="btnOnclick"
+                android:text="Button"
+                app:layout_constraintEnd_toStartOf="@+id/showCal_button"
+                app:layout_constraintTop_toTopOf="@+id/showCal_button" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -70,6 +81,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/showCal_cons">
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
