--- a/app/src/main/res/layout/plus_food_activity.xml
+++ b/app/src/main/res/layout/plus_food_activity.xml
@@ -248,6 +248,15 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/Date" />
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:srcCompat="@drawable/ic_launcher_foreground"
+                        tools:layout_editor_absoluteY="66dp" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
 
