--- a/app/src/main/res/layout/plus_food_activity.xml
+++ b/app/src/main/res/layout/plus_food_activity.xml
@@ -114,7 +114,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="16dp"
-                        android:background="@color/darkBrown"
+                        android:background="@color/orange"
                         android:textColor="@color/mainLightYellow"
                         android:padding="7dp"
                         android:text="@string/input"
@@ -124,13 +124,14 @@
 
                     <ImageView
                         android:id="@+id/imageView"
-                        android:layout_width="127dp"
-                        android:layout_height="93dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
-                        android:background="#00000000"
+                        android:background="@drawable/round_button_lightyellow"
+                        android:padding="8dp"
                         android:src="@drawable/ic_launcher_background"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -159,18 +160,16 @@
 
                     <EditText
                         android:id="@+id/food_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentTop="true"
                         android:layout_marginStart="16dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@color/mainLightYellow"
-                        android:ems="10"
+                        android:layout_marginEnd="8dp"
+                        android:background="@drawable/round_button_lightyellow"
+                        android:gravity="center"
                         android:hint="@string/food_name"
                         android:inputType="textPersonName"
-                        android:textSize="12sp"
+                        android:padding="4dp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/food_cnt"
                         app:layout_constraintStart_toStartOf="parent"
@@ -178,17 +177,16 @@
 
                     <EditText
                         android:id="@+id/food_cnt"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginStart="25dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginEnd="16dp"
-                        android:background="@color/mainLightYellow"
-                        android:ems="10"
+                        android:background="@drawable/round_button_lightyellow"
+                        android:gravity="center"
                         android:hint="@string/food_cnt"
                         android:inputType="number"
-                        android:textSize="12sp"
+                        android:padding="4dp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/food_name"
@@ -202,16 +200,19 @@
 
                     <EditText
                         android:id="@+id/Date"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
                         android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:padding="4dp"
+                        android:background="@drawable/round_button_lightyellow"
                         android:clickable="true"
                         android:editable="false"
                         android:focusable="false"
                         android:gravity="center"
                         android:hint="date"
-                        android:background="@color/mainLightYellow"
-                        android:textSize="14sp"
+                        android:textSize="15sp"
                         app:layout_constraintEnd_toStartOf="@+id/Time"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -219,15 +220,17 @@
 
                     <EditText
                         android:id="@+id/Time"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="139dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
+                        android:layout_marginEnd="16dp"
+                        android:padding="4dp"
+                        android:background="@drawable/round_button_lightyellow"
                         android:clickable="true"
                         android:editable="false"
                         android:focusable="false"
                         android:gravity="center"
-                        android:background="@color/mainLightYellow"
                         android:hint="time"
                         android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -237,26 +240,24 @@
 
                     <EditText
                         android:id="@+id/editTextTextMultiLine"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:padding="4dp"
+                        android:background="@drawable/round_button_lightyellow"
                         android:ems="10"
                         android:gravity="start|top"
                         android:hint="식사 설명이나 감상"
-                        android:background="@color/mainLightYellow"
                         android:inputType="textMultiLine"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/Date" />
 
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:srcCompat="@drawable/ic_launcher_foreground"
-                        tools:layout_editor_absoluteY="66dp" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
 
