--- a/app/src/main/res/layout/custom_popup_plus.xml
+++ b/app/src/main/res/layout/custom_popup_plus.xml
@@ -128,6 +128,20 @@
                 <TextView
                     android:id="@+id/food_cnt"
                     android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/round_button_yellow"
+                    android:padding="8dp"
+                    android:text="10"
+                    app:layout_constraintEnd_toStartOf="@+id/food_kcal"
+                    app:layout_constraintStart_toEndOf="@+id/imageView"
+                    app:layout_constraintTop_toBottomOf="@+id/food_name" />
+
+                <TextView
+                    android:id="@+id/food_kcal"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
@@ -135,6 +149,7 @@
                     android:padding="8dp"
                     android:text="TextView"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/food_cnt"
                     app:layout_constraintTop_toBottomOf="@+id/food_name" />
 
                 <TextView
